fix/ icon spacing and gif mobile

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -6,7 +6,7 @@
   margin-top: 30px;
   flex-wrap: wrap;
   @media screen and (max-width: 880px) {
-    margin: 40px 0px;
+    margin: 40px 0px 0px 0px;
   }
   .row {
     width: 430px;
