--- a/src/components/HeaderApp/styles.module.scss
+++ b/src/components/HeaderApp/styles.module.scss
@@ -64,7 +64,7 @@
     cursor: pointer;
     display: inline-block;
     float: right;
-    padding: 32px 20px;
+    padding: 28px 20px;
     position: relative;
     user-select: none;
     .navicon {
