--- a/src/components/HeaderMobile/styles.module.scss
+++ b/src/components/HeaderMobile/styles.module.scss
@@ -1,4 +1,6 @@
 .headerMobile {
+  display: flex;
+  justify-content: end;
   @media only screen and (min-width: 1250px) {
     display: none;
   }
@@ -67,19 +69,53 @@
 }
 
 .btnOpen {
-  background-color: #438dfc;
+  background-image: linear-gradient(-80deg, #12c2e9, #d954c8);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
   border: 0;
-  font-size: 18px;
+  font-size: 16px;
   margin: 10px;
   color: #fff;
   border-radius: 12px;
   padding: 5px 10px;
+  font-weight: 500;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-.btnClose {
-  background-color: #438dfc;
+.btnClose { 
   border: 0;
-  font-size: 22px;
+  font-size: 16px;
   margin: 10px;
   color: #fff;
+  border-radius: 12px;
+  padding: 5px 10px;
+  font-weight: 500;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-image: linear-gradient(-80deg, #12c2e9, #d954c8);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 }
